[workspace]
members = [
  "frost",
]
resolver = "2"

[package]
name = "tss-sol-demo"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.70"

[dependencies]
anyhow = "1.0.70"
frost-evm = { version = "0.1.0", path = "./frost" }
hex = "0.4.3"
k256 = "0.13.1"
rosetta-client = "0.1.1"
serde_json = "1.0.96"
sha3 = "0.10.7"

[dev-dependencies]
rand = "0.8.5"
rosetta-config-ethereum = "0.1.0"
rosetta-docker = "0.1.0"
tokio = { version = "1.27.0", features = ["full"] }

[patch.crates-io]
frost-core = { git = "https://github.com/zcashfoundation/frost" }
frost-secp256k1 = { git = "https://github.com/zcashfoundation/frost" }
rosetta-client = { path = "../chain-connectors/rosetta-client" }
rosetta-config-ethereum = { path = "../chain-connectors/chains/ethereum/config" }
rosetta-docker = { path = "../chain-connectors/rosetta-docker" }
