[workspace]
members = [
  "frost",
]
resolver = "2"

[package]
name = "tss-sol-demo"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.71"

[dependencies]
anyhow = "1.0.71"
frost-evm = { version = "0.1.0", path = "./frost" }
hex = "0.4.3"
rosetta-client = "0.2.5"
serde_json = "1.0.96"

[dev-dependencies]
rand = "0.8.5"
rosetta-config-ethereum = "0.2.5"
rosetta-docker = "0.2.5"
tokio = { version = "1.28.0", features = ["full"] }
