[workspace]
members = [
  "frost",
  "schnorr",
]
resolver = "2"

[package]
name = "evm-verifier"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.73"

[dependencies]
anyhow = "1.0.73"
frost-evm = { version = "0.1.0", path = "./frost" }
hex = "0.4.3"
rosetta-client = { git = "https://github.com/analog-labs/chain-connectors" }
serde_json = "1.0.104"

[dev-dependencies]
rand = "0.8.5"
rosetta-config-ethereum = { git = "https://github.com/analog-labs/chain-connectors" }
rosetta-docker = { git = "https://github.com/analog-labs/chain-connectors" }
rosetta-server-ethereum = { git = "https://github.com/analog-labs/chain-connectors" }
tokio = { version = "1.31.0", features = ["full"] }
