[package]
name = "frost-evm"
version = "0.1.0"
edition = "2021"

[features]
serde = ["frost-core/serde", "frost-secp256k1/serde", "schnorr-evm/serde"]

[dependencies]
frost-core = { features = ["internals"], git = "https://github.com/zcashfoundation/frost", branch = "main" }
frost-secp256k1 = { git = "https://github.com/zcashfoundation/frost", branch = "main" }
schnorr-evm = { path = "../schnorr" }
