[package]
name = "frost-evm"
version = "0.1.0"
edition = "2021"

[features]
serde = ["frost-core/serde", "frost-secp256k1/serde", "schnorr-evm/serde"]

[dependencies]
frost-core = { version = "1.0.0-rc.0", features = ["internals"] }
frost-secp256k1 = { version = "1.0.0-rc.0" }
schnorr-evm = { version = "0.1.0", path = "../schnorr" }
