[package]
name = "schnorr-evm"
version = "0.1.0"
edition = "2021"
description = "schnorr signatures optimized for evm"
repository = "https://github.com/Analog-Labs/frost-evm"
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
serde = ["dep:serde"]
std = ["rand_core/getrandom", "dep:frost-core", "dep:frost-secp256k1"]

[dependencies]
frost-core = { version = "1.0.0", optional = true, features = ["internals"] }
frost-secp256k1 = { version = "1.0.0", optional = true, default-features = false }
k256 = { version = "0.13.1", default-features = false, features = ["arithmetic", "hash2curve"] }
rand_core = "0.6.4"
serde = { version = "1.0.188", optional = true }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
